--- a/index.html
+++ b/index.html
@@ -881,14 +881,13 @@
       </div>
       <div>
         <div class="swiper mySwiper max-w-[1280px] mb-[40px] rounded-[8px] !p-[24px] ">
-          <div class="swiper-wrapper">
+          <div class="swiper-wrapper grid grid-cols-1 m:grid-cols-2 gap-6">
             <div class="swiper-slide !flex !justify-center !items-center w-[450px]">
               <iframe width="560" height="400" src="https://www.youtube.com/embed/lnpAcQS6Xz4" title="Domen nədir? Domen nə üçündür? Domen necə almaq olar?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
              
             </div>
             <div class="swiper-slide !flex !justify-center !items-center w-[450x]">
-              <iframe width="560" height="400" src="https://www.youtube.com/embed/_iU4jMtpfpY" title="Vurma Yarismasi.Gulmeli video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
-            </div>
+              <iframe width="560" height="400" src="https://www.youtube.com/embed/Cq3V130Qikc" title="Sayt.az-la biznesini önə çıxar" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            </div>
           </div>
           <div class="swiper-button-next"></div>
           <div class="swiper-button-prev"></div>
